--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.6.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
@@ -41,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "pure-css": "^1.0.4"
   }
 }
