--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "cdbreact": "^1.5.9",
+    "classnames": "^2.3.2",
     "emoji-picker-react": "^4.4.7",
     "formik": "^2.2.9",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-responsive-gallery": "^3.0.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
