--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "cdbreact": "^1.5.9",
     "emoji-picker-react": "^4.4.7",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-audio-voice-recorder": "^1.0.4",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-icons": "^1.10.2",
     "react-bootstrap-sidebar-menu": "^2.0.3",
@@ -18,6 +20,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-media-recorder": "^1.6.6",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
