--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
     "react-calendar": "^4.0.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-download-link": "^2.3.0",
+    "react-file-download": "^0.3.5",
+    "react-h5-audio-player": "^3.8.6",
     "react-icons": "^4.8.0",
     "react-media-recorder": "^1.6.6",
+    "react-native-sound": "^0.11.2",
     "react-responsive-gallery": "^3.0.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
+    "react-use-downloader": "^1.2.4",
     "socket.io-client": "^4.6.1",
     "universal-cookie": "^4.0.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
